--- a/quick-decision/quickdecision.css
+++ b/quick-decision/quickdecision.css
@@ -1,8 +1,3 @@
-#controller {
-  width: 140px;
-  margin: 0 auto;
-}
-
 button {
   width: 60px;
   height: 60px;
@@ -23,10 +18,31 @@ p.qd {
   text-align: center;
 }
 
+div#conteudo {
+  width: 100%;
+  display: table;
+  margin: 0 auto;
+  padding: 10px 10px 104px; /* Espaço do rodapé */
+}
+
+div#information
+{
+  display: table-cell;
+  width: 440px;
+}
+
 div#annotators
 {
-  float: left;
+  display: table-cell;
   width: 640px;
+}
+
+span.description
+{
+  width: 420px;
+  height: 160px;
+  display: inline-block;
+  border: 1px solid black;
 }
 
 div.child
